# instrumentRs2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yml
examples/digoutbox/: Cargo.toml  README.md
examples/digoutbox/examples/: ex_smol.rs  ex_tokio.rs  simple_test.rs
examples/digoutbox/src/: channel.rs  dev.rs  impl_dev.rs  impl_instrument.rs  impl_instrument_async.rs  instrument.rs  instrument_async.rs  lib.rs  types.rs
examples/digoutbox/tests/: example_test.rs
instrumentrs/: Cargo.toml  README.md
instrumentrs/src/: lib.rs
instrumentrs/src/mock_interface/: macros.rs  mod.rs  sync.rs
instrumentrs/src/transport/: fn_sync.rs  writable.rs
instrumentrs/tests/mock_interface/: common.rs  str_interface.rs  u8_interface.rs
macros/derive-macro-tests/: Cargo.toml
macros/derive-macro-tests/src/: main.rs
macros/derive-macro-tests/tests/: compilation_tests.rs  enum_derive.rs  struct_derive.rs
macros/derive-macro-tests/tests/fails/: enum_duplicate_parameters.rs  enum_duplicate_parameters.stderr  enum_invalid_cmd_placeholder.rs  enum_invalid_cmd_placeholder.stderr  enum_params_and_cmd_missing.rs  enum_params_and_cmd_missing.stderr  enum_wrong_command_formatter.rs  enum_wrong_command_formatter.stderr  struct_placeholder_errors.rs  struct_placeholder_errors.stderr
macros/instrumentrs-macros/: Cargo.toml
macros/instrumentrs-macros/src/: lib.rs
macros/instrumentrs-macros/src/derive/: cmd.rs  enums.rs  error.rs  mod.rs  structs.rs  utils.rs
macros/instrumentrs-macros/src/parameter/: mod.rs
src/: errors.rs  lib.rs
src/device/: mod.rs
src/instrument/: mod.rs
src/mock_interface/: blocking.rs  errors.rs  macros.rs  mod.rs  sync.rs
src/transport/: fn_async.rs  fn_blocking.rs  mod.rs  writable.rs
tests/mock_interface/: common.rs  main.rs  str_interface.rs  u8_interface.rs
