[workspace]
members = [
  "examples/digoutbox",
  "instrumentrs",
  "macros/derive-macro-tests",
  "macros/instrumentrs-macros",
]
resolver = "3"

package.version = "0.2.0"
package.authors = ["Reto Trappitsch <reto@galactic-forensics.space>"]
package.license = "MIT OR Apache-2.0"
package.homepage = "https://instrument.rs"
package.repository = "https://github.com/trappitsch/instrumentrs"
package.edition = "2024"
package.rust-version = "1.97"

[workspace.dependencies]
instrumentrs = { path = "./instrumentrs" }
instrumentrs-macros = { path = "./macros/instrumentrs-macros/" }

proc-macro2 = "1"
quote = "1"
syn = "3"
termcolor = "1.4"
thiserror = "2"

trybuild = "1"
