[package]
name = "derive-macro-tests"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
instrumentrs-macros = { workspace = true }
instrumentrs = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
