[package]
name = "instrumentrs-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "extra-traits",
] } # FIXME: remove extra traits at the end

[lib]
proc-macro = true
